[gd_scene load_steps=22 format=1]

[ext_resource path="res://game/assets/images/road.png" type="Texture" id=1]
[ext_resource path="res://script/bgscroll.gd" type="Script" id=2]
[ext_resource path="res://script/camera.gd" type="Script" id=3]
[ext_resource path="res://game/packed/player/Player.gd" type="Script" id=4]
[ext_resource path="res://game/assets/images/motor1.png" type="Texture" id=5]
[ext_resource path="res://game/assets/images/road_06.png" type="Texture" id=6]
[ext_resource path="res://game/assets/images/road_09.png" type="Texture" id=7]
[ext_resource path="res://game/assets/images/spedo_03.png" type="Texture" id=8]
[ext_resource path="res://font/BebasNeue-36.fnt" type="BitmapFont" id=9]
[ext_resource path="res://font/BebasNeue-48.fnt" type="BitmapFont" id=10]
[ext_resource path="res://script/spawner.gd" type="Script" id=11]
[ext_resource path="res://script/quest.gd" type="Script" id=12]
[ext_resource path="res://images/1layout-popup.png" type="Texture" id=13]
[ext_resource path="res://images/layout-popup_06.png" type="Texture" id=14]
[ext_resource path="res://images/layout-popup_07.png" type="Texture" id=15]
[ext_resource path="res://images/Background/highscore.png" type="Texture" id=16]
[ext_resource path="res://script/saver.gd" type="Script" id=17]
[ext_resource path="res://font/BebasNeue.fnt" type="BitmapFont" id=18]
[ext_resource path="res://images/icon-highscore_03.png" type="Texture" id=19]
[ext_resource path="res://images/icon-highscore_04.png" type="Texture" id=20]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 45.7423, 93.2471 )

[node name="main" type="Node2D"]

transform/pos = Vector2( 128.317, 159.002 )

[node name="bg" type="Sprite" parent="."]

transform/pos = Vector2( 275.579, 480 )
texture = ExtResource( 1 )
region = true
region_rect = Rect2( 0, 500, 640, 960 )
script/script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 270, 480 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 3 )

[node name="Player" type="RigidBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 263.861, 775.089 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 6.81616, -72.7062 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 3
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Player"]

transform/pos = Vector2( 6.81616, -72.7062 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]

transform/pos = Vector2( 6.81616, -72.7062 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="btn_left" type="TextureButton" parent="Player"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -366.0
margin/top = 119.0
margin/right = -48.0
margin/bottom = 380.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 4

[node name="btn_right" type="TextureButton" parent="Player"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 53.0
margin/top = 133.0
margin/right = 391.0
margin/bottom = 394.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 4

[node name="TextureFrame" type="TextureFrame" parent="Player"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -105.0
margin/top = 131.0
margin/right = 121.0
margin/bottom = 287.0
texture = ExtResource( 8 )
stretch_mode = 0

[node name="speedo" type="Label" parent="Player"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -55.0
margin/top = 184.0
margin/right = 80.0
margin/bottom = 230.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.0859375, 0.0141176, 0.0140991, 1 )
text = "00"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -84.0
margin/top = -123.0
margin/right = 51.0
margin/bottom = -77.0
custom_fonts/font = ExtResource( 10 )
text = "Score : 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Spawner" type="Timer" parent="."]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = true
script/script = ExtResource( 11 )

[node name="Quest" type="Timer" parent="."]

process_mode = 1
wait_time = 25.0
one_shot = false
autostart = true
script/script = ExtResource( 12 )

[node name="close_form" type="TextureFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -128.0
margin/top = 3.0
margin/right = 672.0
margin/bottom = 709.0
texture = ExtResource( 13 )
stretch_mode = 4

[node name="yes" type="TextureButton" parent="close_form"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 53.0
margin/top = 366.0
margin/right = 386.0
margin/bottom = 579.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="no" type="TextureButton" parent="close_form"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 434.0
margin/top = 370.0
margin/right = 718.0
margin/bottom = 583.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 15 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Panel" type="TextureFrame" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -130.0
margin/top = -157.0
margin/right = 670.0
margin/bottom = 1123.0
texture = ExtResource( 16 )
stretch_mode = 0
script/script = ExtResource( 17 )

[node name="jdl" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 275.0
margin/top = 358.0
margin/right = 498.0
margin/bottom = 404.0
custom_fonts/font = ExtResource( 10 )
text = "SCORE ANDA : "
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="current_score" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 272.0
margin/top = 431.0
margin/right = 495.0
margin/bottom = 477.0
custom_fonts/font = ExtResource( 10 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="jdl2" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 252.0
margin/top = 553.0
margin/right = 516.0
margin/bottom = 599.0
custom_fonts/font = ExtResource( 10 )
text = "SCORE TERTINGGI :"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="high_score" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 223.0
margin/top = 627.0
margin/right = 328.0
margin/bottom = 673.0
custom_fonts/font = ExtResource( 18 )
text = "1."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="high_score1" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 225.0
margin/top = 678.0
margin/right = 330.0
margin/bottom = 724.0
custom_fonts/font = ExtResource( 18 )
text = "2."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="high_score2" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 226.0
margin/top = 728.0
margin/right = 331.0
margin/bottom = 774.0
custom_fonts/font = ExtResource( 18 )
text = "3."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="home" type="TextureButton" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 186.0
margin/top = 781.0
margin/right = 399.0
margin/bottom = 989.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 19 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="restart" type="TextureButton" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 413.0
margin/top = 784.0
margin/right = 615.0
margin/bottom = 973.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 20 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="pressed" from="close_form/yes" to="bg" method="_on_yes_pressed"]

[connection signal="pressed" from="close_form/no" to="bg" method="_on_no_pressed"]

[connection signal="pressed" from="Panel/home" to="bg" method="_on_home_pressed"]

[connection signal="pressed" from="Panel/restart" to="bg" method="_on_restart_pressed"]


